# conductor-llm

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  README.md  RELEASE_SUMMARY.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
api/: __init__.py  main.py
conductor/: __init__.py  calibrator.py  circuit_breaker.py  classifier.py  cli.py  coefficients.py  config.py  control_plane.py  cost_control.py  evaluator.py  executor.py  generators.py  logger.py  metrics.py  models.py  predictor.py  rate_limiter.py  router.py  schemas.py  session.py  simple.py  smart_classifier.py  storage.py  strategies.py  validation.py
examples/: CASE_STUDY.md  basic_usage.py  roi_calculator.py
tests/: __init__.py  test_classifier.py  test_cost_control.py  test_evaluator.py  test_integration.py  test_predictor.py  test_router.py  test_session.py  test_simple.py  test_smart_classifier.py  test_storage.py
tests/fixtures/: sample_requests.json
