[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "conductor-llm"
version = "2.1.0"
description = "Save money on LLM calls. Automatically picks cheap vs expensive models."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Rana Muhammad Usman", email = "ranausman@outlook.com"}
]
keywords = ["llm", "openai", "gpt", "cost-optimization", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = []

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
api = [
    "fastapi>=0.110.0",
    "uvicorn>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/ranausmans/conductor"
Repository = "https://github.com/ranausmans/conductor"

[tool.setuptools.packages.find]
where = ["."]
include = ["conductor*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
